# Maxx-Steele-1984-Robot

./: .gitignore  README.md  TODO.md
Cartridge/: PROGRAMMING.md  README.md
Chassis/: README.md
DataSheets/: README.md
Demo Cartridge/: README.md
Docs/: README.md
Face/: README.md
Mainboard/: README.md
MechanicalManual/: 01-Disassembly.md  02-Reassembly.md  03-Chassis-Photos.md  Hardware-Assets.csv  README.md
Paddle Mirror/: README.md
PaddleMirror/: README.md
Power/: README.md
ProgrammersGuide/: 01-Bytecode-Programming-Rules.md  02-Opcode-Vocabulary.md  04-Programming-Speech-and-Music.md  06-Input-Output-Guide.md  Appendices.md  README.md
Receiver/: README.md
Simulator/: README.md  patches.json
TechnicalManual/: 01-Bytecode-Programming-Rules.md  02-Opcode-Vocabulary.md  03-Programming-Motion-and-Display.md  04-Programming-Speech-and-Music.md  05-Cartridge-Bootstrap-and-Internal-ROM.md  06-Input-Output-Guide.md  07-UltraMaxx-BASIC-Language.md  Appendices.md  Quick-Reference.md  README.md  Schematics.md
Transmitter/: README.md  remote-keypad.md  transmitter-architecture.md  transmitter-bom.md
UserManual/: 01-Getting-Started.md  02-Setup.md  04-Immediate-Mode.md  07-Advanced-Features.md  09-Compliance.md  README.md
kicad/: README.md
tools/maxxbas/: .gitignore  Cargo.toml  README.md
tools/maxxbas/scripts/: gen_music_assets.py  gen_speech_assets.py
tools/maxxbas/src/: cart.rs  decode.rs  emit.rs  error.rs  input.rs  lib.rs  main.rs  parse.rs  upload.rs  validate.rs
tools/maxxbas/src/sim/: audio.rs  display.rs  emoji_font.rs  firmware.rs  gui.rs  interactive.rs  keypad.rs  live_gui.rs  mod.rs  music.rs  patches.rs  plastic_skin.rs  remote_branding.rs  remote_font.rs  remote_panel.rs  report.rs  robot.rs  robot_view.rs  speech.rs  speech_font.rs  speech_sam.rs  trace.rs  trace_breakpoint.rs  ui_font.rs  visual.rs
(+237 files in other folders)
