[package]
name = "maxxbas"
version = "0.1.0"
edition = "2021"
description = "Compile MaxxBAS source into 4 KB Maxx Steele cartridge ROM images"
readme = "README.md"
license = "MIT OR Apache-2.0"

[lib]
name = "maxxbas"
path = "src/lib.rs"

[[bin]]
name = "maxxbas"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0"

[dev-dependencies]
pretty_assertions = "1.4"