[package]
name = "maxxbas"
version = "0.1.0"
edition = "2021"
description = "Maxx Steele toolchain — compile MaxxBAS, decode ROMs, upload to PicoROM"
readme = "README.md"
license = "MIT OR Apache-2.0"

[lib]
name = "maxxbas"
path = "src/lib.rs"

[[bin]]
name = "maxx"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.20"
thiserror = "2.0"
which = "7.0"

[dev-dependencies]
pretty_assertions = "1.4"